Added final touches

--- a/AI_MachineLearning/HousePricePrediction_RegressionModel.ipynb
+++ b/AI_MachineLearning/HousePricePrediction_RegressionModel.ipynb
@@ -811,6 +811,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## User Input"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -833,13 +840,6 @@
         "\n",
         "for pred in pred_user: print(pred)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
