--- a/AI_MachineLearning/Aieye_Introduction_to_Deep_Learning.ipynb
+++ b/AI_MachineLearning/Aieye_Introduction_to_Deep_Learning.ipynb
@@ -456,7 +456,7 @@
         "id": "q4lmITvA8AMt"
       },
       "source": [
-        "## Adding the second hidden layer"
+        "## Adding the hidden layers\n"
       ]
     },
     {
@@ -475,9 +475,36 @@
         "model.add(Dense(512))\n",
         "model.add(BatchNormalization())\n",
         "model.add(Activation('relu'))\n",
-        "model.add(Dropout(0.2))\n",
-        "\n"
+        "model.add(Dropout(0.2))\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add(Dense(128))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dropout(0.2))"
+      ],
+      "metadata": {
+        "id": "0Ln6bWLfgRlN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add(Dense(32))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dropout(0.2))"
+      ],
+      "metadata": {
+        "id": "c5H7cZ80gTMp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -631,7 +658,7 @@
         "\n",
         "if __name__ == '__main__':\n",
         "  history = model.fit(X_train, Y_train,\n",
-        "          batch_size=16, epochs=25,\n",
+        "          batch_size=32, epochs=35,\n",
         "          verbose=1)\n",
         "  plot_loss(history)\n",
         "\n",
@@ -737,7 +764,9 @@
         "    plt.imshow(X_test[incorrect].reshape(28,28), cmap='gray', interpolation='none')\n",
         "    plt.title(\"Predicted {}, Class {}\".format(predicted_classes[incorrect], y_test[incorrect]))\n",
         "\n",
-        "plt.tight_layout()"
+        "plt.tight_layout()\n",
+        "\n",
+        "print(len(incorrect_indices))"
       ]
     },
     {
