--- a/AI_MachineLearning/Stress Predicition/StressPrediction_CatBoost.ipynb
+++ b/AI_MachineLearning/Stress Predicition/StressPrediction_CatBoost.ipynb
@@ -14,49 +14,14 @@
       "cell_type": "code",
       "source": [
         "# just in case\n",
-        "!pip install catboost"
+        "# !pip install catboost"
       ],
       "metadata": {
-        "id": "vSQWi9gYDWCM",
-        "outputId": "0369add9-57c2-4aee-966a-16b5a8c33942",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vSQWi9gYDWCM"
       },
       "id": "vSQWi9gYDWCM",
       "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting catboost\n",
-            "  Downloading catboost-1.2.8-cp312-cp312-manylinux2014_x86_64.whl.metadata (1.2 kB)\n",
-            "Requirement already satisfied: graphviz in /usr/local/lib/python3.12/dist-packages (from catboost) (0.21)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from catboost) (3.10.0)\n",
-            "Requirement already satisfied: numpy<3.0,>=1.16.0 in /usr/local/lib/python3.12/dist-packages (from catboost) (2.0.2)\n",
-            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.12/dist-packages (from catboost) (2.2.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.12/dist-packages (from catboost) (1.16.2)\n",
-            "Requirement already satisfied: plotly in /usr/local/lib/python3.12/dist-packages (from catboost) (5.24.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.12/dist-packages (from catboost) (1.17.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas>=0.24->catboost) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=0.24->catboost) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=0.24->catboost) (2025.2)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (1.3.3)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (4.60.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (1.4.9)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (25.0)\n",
-            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (11.3.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->catboost) (3.2.5)\n",
-            "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.12/dist-packages (from plotly->catboost) (8.5.0)\n",
-            "Downloading catboost-1.2.8-cp312-cp312-manylinux2014_x86_64.whl (99.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.2/99.2 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: catboost\n",
-            "Successfully installed catboost-1.2.8\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -70,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 2,
       "id": "10c9e625-8169-47fb-9995-3b7bcf9843dc",
       "metadata": {
         "id": "10c9e625-8169-47fb-9995-3b7bcf9843dc"
@@ -102,14 +67,14 @@
       ],
       "metadata": {
         "id": "-zQP900sDFIU",
-        "outputId": "b886eb0d-a3d6-41ec-d0d8-f6e4470d26d4",
+        "outputId": "b0429a44-8e8d-47c1-d7f5-4c6be29e7d23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
         }
       },
       "id": "-zQP900sDFIU",
-      "execution_count": 56,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +103,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3ea0be61-23ed-4492-9816-e2ce02037875\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-397ef2f8-33bd-469f-b799-22dc56d53f5d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -259,7 +224,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ea0be61-23ed-4492-9816-e2ce02037875')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-397ef2f8-33bd-469f-b799-22dc56d53f5d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -311,12 +276,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3ea0be61-23ed-4492-9816-e2ce02037875 button.colab-df-convert');\n",
+              "        document.querySelector('#df-397ef2f8-33bd-469f-b799-22dc56d53f5d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3ea0be61-23ed-4492-9816-e2ce02037875');\n",
+              "        const element = document.querySelector('#df-397ef2f8-33bd-469f-b799-22dc56d53f5d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -336,8 +301,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-6753d5b1-ad14-415e-a7dd-efa693c0208d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6753d5b1-ad14-415e-a7dd-efa693c0208d')\"\n",
+              "    <div id=\"df-3efa9cb8-a00f-4560-9e77-399d7b5e24c2\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3efa9cb8-a00f-4560-9e77-399d7b5e24c2')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -456,7 +421,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-6753d5b1-ad14-415e-a7dd-efa693c0208d button');\n",
+              "            document.querySelector('#df-3efa9cb8-a00f-4560-9e77-399d7b5e24c2 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -473,7 +438,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 3
         }
       ]
     },
@@ -500,7 +465,7 @@
         "df = df.drop('Blood Pressure', axis=1)"
       ],
       "id": "48adee91",
-      "execution_count": 57,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -512,7 +477,7 @@
         "id": "T1b7nJn8__zu"
       },
       "id": "T1b7nJn8__zu",
-      "execution_count": 58,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -536,10 +501,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j_BYpCdABNvQ",
-        "outputId": "3a6bf93d-f05f-414f-811b-3a8f6850c297"
+        "outputId": "577240a3-d01c-4ea5-d994-8304e480f784"
       },
       "id": "j_BYpCdABNvQ",
-      "execution_count": 59,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +539,7 @@
         "id": "zK4QbTGDAYU8"
       },
       "id": "zK4QbTGDAYU8",
-      "execution_count": 60,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -590,32 +555,14 @@
     {
       "cell_type": "code",
       "source": [
-        "df[\"Sleep Disorder\"].fillna(0, inplace=True)"
+        "df.fillna({\"Sleep Disorder\": 0}, inplace=True)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yitPlw4mGE17",
-        "outputId": "62dfe6ce-039a-4a80-fb51-10a4e040901a"
+        "id": "yitPlw4mGE17"
       },
       "id": "yitPlw4mGE17",
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-824426876.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Sleep Disorder\"].fillna(0, inplace=True)\n"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -628,10 +575,10 @@
           "height": 523
         },
         "id": "yKMM4pktFbJA",
-        "outputId": "ba3dee63-f30e-4d3e-da2e-c6652615a47e"
+        "outputId": "19d16f1a-526b-4cdb-d35b-3ed9ba98314c"
       },
       "id": "yKMM4pktFbJA",
-      "execution_count": 62,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +685,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 9
         }
       ]
     },
@@ -753,10 +700,10 @@
           "height": 780
         },
         "id": "T6ionRbGFt71",
-        "outputId": "92c5210a-1480-4996-ae55-dcc3bb8d143a"
+        "outputId": "0dce01f8-f068-4b09-f837-b3ce063a9aad"
       },
       "id": "T6ionRbGFt71",
-      "execution_count": 63,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +799,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6cec5d11-106e-4d38-9035-1c4507642506\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7df3124a-17b0-4700-a733-f1de598bdc99\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1234,7 +1181,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6cec5d11-106e-4d38-9035-1c4507642506')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7df3124a-17b0-4700-a733-f1de598bdc99')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1286,12 +1233,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6cec5d11-106e-4d38-9035-1c4507642506 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7df3124a-17b0-4700-a733-f1de598bdc99 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6cec5d11-106e-4d38-9035-1c4507642506');\n",
+              "        const element = document.querySelector('#df-7df3124a-17b0-4700-a733-f1de598bdc99');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1311,8 +1258,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-02a67a0e-a134-42c6-97a4-5b835371bdd8\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-02a67a0e-a134-42c6-97a4-5b835371bdd8')\"\n",
+              "    <div id=\"df-c8ed3a73-5d02-4245-a2b5-e8b39a19abbf\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c8ed3a73-5d02-4245-a2b5-e8b39a19abbf')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1431,7 +1378,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-02a67a0e-a134-42c6-97a4-5b835371bdd8 button');\n",
+              "            document.querySelector('#df-c8ed3a73-5d02-4245-a2b5-e8b39a19abbf button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1448,7 +1395,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 10
         }
       ]
     },
@@ -1472,7 +1419,7 @@
         "id": "gD4hBoc8DhQQ"
       },
       "id": "gD4hBoc8DhQQ",
-      "execution_count": 64,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1484,7 +1431,7 @@
         "id": "eh9tNYWxAcGY"
       },
       "id": "eh9tNYWxAcGY",
-      "execution_count": 65,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1514,7 +1461,7 @@
         "id": "p-Oo64AJGx8l"
       },
       "id": "p-Oo64AJGx8l",
-      "execution_count": 66,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1537,26 +1484,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ou5wNCS0HsdI",
-        "outputId": "0ef2e1ab-775c-4cef-ed6a-8d08889f4366"
+        "outputId": "f4ae30e6-0c8e-446e-8486-b15cb38efe4e"
       },
       "id": "Ou5wNCS0HsdI",
-      "execution_count": 67,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0:\tlearn: 1.7197959\ttest: 1.7216815\tbest: 1.7216815 (0)\ttotal: 57.8ms\tremaining: 28.9s\n",
-            "50:\tlearn: 0.4705001\ttest: 0.4718703\tbest: 0.4718703 (50)\ttotal: 370ms\tremaining: 3.26s\n",
-            "100:\tlearn: 0.2783842\ttest: 0.2884747\tbest: 0.2884747 (100)\ttotal: 725ms\tremaining: 2.87s\n",
-            "150:\tlearn: 0.2021024\ttest: 0.2238052\tbest: 0.2238052 (150)\ttotal: 1.05s\tremaining: 2.43s\n",
-            "200:\tlearn: 0.1611819\ttest: 0.1911793\tbest: 0.1911793 (200)\ttotal: 1.36s\tremaining: 2.02s\n",
-            "250:\tlearn: 0.1348685\ttest: 0.1709599\tbest: 0.1709599 (250)\ttotal: 1.94s\tremaining: 1.92s\n",
-            "300:\tlearn: 0.1152639\ttest: 0.1544504\tbest: 0.1544504 (300)\ttotal: 2.56s\tremaining: 1.7s\n",
-            "350:\tlearn: 0.0999696\ttest: 0.1410191\tbest: 0.1410191 (350)\ttotal: 3.18s\tremaining: 1.35s\n",
-            "400:\tlearn: 0.0878483\ttest: 0.1302849\tbest: 0.1302849 (400)\ttotal: 3.73s\tremaining: 922ms\n",
-            "450:\tlearn: 0.0791999\ttest: 0.1216797\tbest: 0.1216797 (450)\ttotal: 4.22s\tremaining: 459ms\n",
-            "499:\tlearn: 0.0712154\ttest: 0.1131445\tbest: 0.1131445 (499)\ttotal: 4.5s\tremaining: 0us\n",
+            "0:\tlearn: 1.7197959\ttest: 1.7216815\tbest: 1.7216815 (0)\ttotal: 55.8ms\tremaining: 27.8s\n",
+            "50:\tlearn: 0.4705001\ttest: 0.4718703\tbest: 0.4718703 (50)\ttotal: 355ms\tremaining: 3.13s\n",
+            "100:\tlearn: 0.2783842\ttest: 0.2884747\tbest: 0.2884747 (100)\ttotal: 684ms\tremaining: 2.7s\n",
+            "150:\tlearn: 0.2021024\ttest: 0.2238052\tbest: 0.2238052 (150)\ttotal: 1.01s\tremaining: 2.33s\n",
+            "200:\tlearn: 0.1611819\ttest: 0.1911793\tbest: 0.1911793 (200)\ttotal: 1.32s\tremaining: 1.96s\n",
+            "250:\tlearn: 0.1348685\ttest: 0.1709599\tbest: 0.1709599 (250)\ttotal: 1.6s\tremaining: 1.58s\n",
+            "300:\tlearn: 0.1152639\ttest: 0.1544504\tbest: 0.1544504 (300)\ttotal: 1.88s\tremaining: 1.24s\n",
+            "350:\tlearn: 0.0999696\ttest: 0.1410191\tbest: 0.1410191 (350)\ttotal: 2.19s\tremaining: 929ms\n",
+            "400:\tlearn: 0.0878483\ttest: 0.1302849\tbest: 0.1302849 (400)\ttotal: 2.6s\tremaining: 641ms\n",
+            "450:\tlearn: 0.0791999\ttest: 0.1216797\tbest: 0.1216797 (450)\ttotal: 3.19s\tremaining: 346ms\n",
+            "499:\tlearn: 0.0712154\ttest: 0.1131445\tbest: 0.1131445 (499)\ttotal: 3.75s\tremaining: 0us\n",
             "\n",
             "bestTest = 0.1131445375\n",
             "bestIteration = 499\n",
@@ -1567,11 +1514,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<catboost.core.CatBoostClassifier at 0x785d220e0b60>"
+              "<catboost.core.CatBoostClassifier at 0x7c1280c01640>"
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 14
         }
       ]
     },
@@ -1592,15 +1539,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ea965705",
-        "outputId": "5bdaa361-973a-4626-c6ff-4d632fbc9ba4"
+        "outputId": "d266156e-d01d-4b55-e925-7d6345478636"
       },
       "source": [
         "y_pred = model.predict(x_test)\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
-        "print(f\"Accuracy: {100*accuracy:.2f}%\")we"
+        "print(f\"Accuracy: {100*accuracy:.2f}%\")"
       ],
       "id": "ea965705",
-      "execution_count": 72,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
